--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -25,11 +25,42 @@
     <button onclick="uploadFile()">파일 업로드</button>
 </div>
 
-    <div id="comments-list"></div>
+<div id="comments-list"></div>
+
+<button onclick="openLoginDialog()">로그인 다이얼로그</button>
+<div id="container" style="display: none">
+    <div id="login-container" >
+        <div style="text-align: center; background-color: white; padding: 0 30px;">
+            <div style="margin: 30px 0">로그인</div>
+            <div><input placeholder="사용자 아이디"></div>
+            <div><input placeholder="패스워드" type="password"></div>
+            <div style="margin: 30px 0">
+                <button>확인</button>
+                <button onclick="closeLoginDialog()">취소</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<style>
+    #login-container {
+        display: flex; justify-content: center; align-items: center;
+        background-color: #000000aa;
+        position: fixed; left: 0; top: 0; width: 100vw; height: 100vh;
+    }
+</style>
     <script src="http://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
             crossorigin="anonymous"></script>
     <script>
+        function openLoginDialog() {
+            $('#container').show(400);
+        }
+        
+        function closeLoginDialog() {
+            $('#container').hide(1000);
+        }
+
         async function uploadFile() {
             try{
                 let fileInput = $('#upload-file')[0].files[0];
@@ -87,7 +118,6 @@
                     console.log(e.message());
                     alert("유저 등록에 실패함");
                 }
-
             }
         }
 
